# my-main-package

./: pyproject.toml
main_package/: main.py
main_package/main_package/: main.py
