[tool.poetry]
name = "main_package"
version = "0.1.0"
description = "A public package"
authors = ["Your Name <you@example.com>"]
packages = [{include = "main_package"}]


[tool.poetry.dependencies]
python = "^3.8"
my-private-dependency = { git = "https://github.com/clytaemnestra/my-private-dependency.git", optional = true }
