[tool.poetry]
name = "main_package"
version = "0.1.1"
description = "A public package"
authors = ["Your Name <you@example.com>"]
packages = [{include = "main_package"}]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
dependency = { git = "https://github.com/clytaemnestra/dependency.git", optional = true }

[tool.poetry.extras]
dependency = ["dependency"]